--- a/app/src/main/res/layout/game_start.xml
+++ b/app/src/main/res/layout/game_start.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fonallwords"
-    tools:context=".GameStart">
+    tools:context=".GameStart"
+    android:screenOrientation="portrait" >
 
     <RelativeLayout
         android:id="@+id/topLayout"
