--- a/app/src/main/res/layout/reset_resultats.xml
+++ b/app/src/main/res/layout/reset_resultats.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorSpeed">
+    android:background="@color/colorSpeed"
+    android:screenOrientation="portrait" >
 
     <Button
         android:id="@+id/reset_no"
