--- a/app/src/main/res/layout/activity_settings_and_params.xml
+++ b/app/src/main/res/layout/activity_settings_and_params.xml
@@ -6,94 +6,339 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".settings.SettingsAndParams"
-    android:background="@drawable/desk2"
+    android:background="@drawable/settings_background"
     android:screenOrientation="portrait" >
 
 
-    <Button
-        android:id="@+id/speed_game"
-        android:layout_width="120dp"
-        android:layout_height="60dp"
-        android:background="@drawable/forlessbutton"
-        android:textSize="16sp"
-        android:text="@string/Speed"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="100dp"
-        android:onClick="Change_speed"/>
+    <ImageView
+        android:id="@+id/settings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/settings_settings"
+        android:layout_centerHorizontal="true"/>
 
-    <Button
-        android:id="@+id/total_resset"
-        android:layout_width="120dp"
-        android:layout_height="60dp"
-        android:background="@drawable/resetbutton"
-        android:textSize="16sp"
-        android:text="@string/Total_reset"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="50dp"
-        android:layout_marginTop="100dp"
-        android:onClick="Totaly_reset_progress"/>
+    <TextView
+        android:id="@+id/type_game"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/speed_game"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_below="@+id/settings"
+        android:layout_marginTop="15dp"
+        android:layout_centerHorizontal="true"/>
+
+            <ImageView
+                android:id="@+id/settings_right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/settings_right"
+                android:layout_toEndOf="@id/type_game"
+                android:layout_below="@+id/settings"
+                android:layout_marginTop="25dp"
+                android:layout_marginStart="30dp"
+                android:layout_centerHorizontal="true"/>
+            <ImageView
+                android:id="@+id/settings_left"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/settings_left"
+                android:layout_toStartOf="@id/type_game"
+                android:layout_below="@+id/settings"
+                android:layout_marginTop="25dp"
+                android:layout_marginEnd="30dp"
+                android:layout_centerHorizontal="true"/>
+
+
+    <TextView
+        android:id="@+id/switch_slow_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_toStartOf="@+id/switch_medium_text"
+        android:layout_below="@id/type_game"
+        android:layout_marginTop="20dp"
+        android:textColor="#ffff"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:text="@string/Slow"/>
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/switch_slow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_toStartOf="@+id/switch_mediun"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="35dp"
+        android:checked="false"
+        android:rotation="270"
+        android:layout_below="@+id/switch_slow_text"/>
+            <TextView
+                android:id="@+id/switch_medium_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/type_game"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="20dp"
+                android:textColor="#ffff"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:text="@string/Medium"/>
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/switch_mediun"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="15dp"
+                android:checked="true"
+                android:rotation="270"
+                android:layout_below="@+id/switch_slow_text"/>
+                <TextView
+                    android:id="@+id/switch_fast_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toEndOf="@+id/switch_medium_text"
+                    android:layout_below="@id/type_game"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginStart="20dp"
+                    android:textColor="#ffff"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    android:text="@string/Fast"/>
+                <androidx.appcompat.widget.SwitchCompat
+                    android:id="@+id/switch_fast"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toEndOf="@+id/switch_mediun"
+                    android:layout_marginStart="35dp"
+                    android:layout_marginTop="15dp"
+                    android:checked="false"
+                    android:rotation="270"
+                    android:layout_below="@+id/switch_fast_text"/>
+
+    <TextView
+        android:id="@+id/set_game"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/type_game"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_below="@+id/switch_mediun"
+        android:layout_marginTop="25dp"
+        android:layout_centerHorizontal="true"/>
+        <ImageView
+            android:id="@+id/set_game_right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/settings_right"
+            android:layout_toEndOf="@id/type_game"
+            android:layout_below="@+id/switch_mediun"
+            android:layout_marginTop="35dp"
+            android:layout_marginStart="30dp"
+            android:layout_centerHorizontal="true"/>
+        <ImageView
+            android:id="@+id/set_game_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/settings_left"
+            android:layout_toStartOf="@id/type_game"
+            android:layout_below="@+id/switch_mediun"
+            android:layout_marginTop="35dp"
+            android:layout_marginEnd="30dp"
+            android:layout_centerHorizontal="true"/>
+
 
     <Button
         android:id="@+id/standart_game"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:background="@drawable/forlessbutton"
-        android:textSize="16sp"
-        android:text="@string/Game_standart"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/setting_standart_game"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/speed_game"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="150dp"/>
+        android:layout_below="@+id/set_game"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:onClick="notNow"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/standart"
+            android:layout_below="@+id/standart_game"
+            android:layout_marginStart="20dp"
+            android:textStyle="italic"
+            android:textSize="11sp"
+            android:layout_alignParentStart="true"/>
 
     <Button
         android:id="@+id/time_game"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:background="@drawable/forlessbutton"
-        android:textSize="16sp"
-        android:text="@string/Game_time"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/total_resset"
-        android:layout_marginEnd="30dp"
-        android:layout_marginTop="150dp"/>
-
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/setting_time_game"
+        android:layout_below="@+id/set_game"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:onClick="notNow"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/onTime"
+            android:layout_below="@+id/standart_game"
+            android:layout_marginStart="20dp"
+            android:textStyle="italic"
+            android:textSize="11sp"
+            android:layout_centerHorizontal="true"/>
 
     <Button
-        android:id="@+id/languache_game"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:background="@drawable/forlessbutton"
-        android:textSize="16sp"
-        android:text="@string/Game_language"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/standart_game"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"/>
-
+        android:id="@+id/total_resset"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:onClick="Totaly_reset_progress"
+        android:background="@drawable/setting_reset_progres"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/set_game"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="20dp"/>
+        <TextView
+            android:id="@+id/textResset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Total_reset"
+            android:layout_below="@+id/standart_game"
+            android:layout_marginEnd="20dp"
+            android:textStyle="italic"
+            android:textSize="11sp"
+            android:layout_alignParentEnd="true"/>
+        <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/ressets"
+        android:layout_below="@+id/textResset"
+        android:layout_marginEnd="20dp"
+        android:textStyle="italic"
+        android:textSize="11sp"
+        android:layout_alignParentEnd="true"/>
 
     <Button
         android:id="@+id/no_idea_game"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:background="@drawable/forlessbutton"
-        android:textSize="16sp"
-        android:text="@string/Game_no_idea"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/setting_develop"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/time_game"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="60dp"
+        android:onClick="notNow"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Game_no_idea"
+            android:layout_below="@+id/no_idea_game"
+            android:layout_marginStart="20dp"
+            android:textStyle="italic"
+            android:textSize="11sp"
+            android:layout_alignParentStart="true"/>
+
+    <Button
+        android:id="@+id/bell_game"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/setting_bell"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/time_game"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="60dp"
+        android:onClick="notNow"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/bells"
+            android:layout_below="@+id/bell_game"
+            android:layout_marginStart="20dp"
+            android:textStyle="italic"
+            android:textSize="11sp"
+            android:layout_centerHorizontal="true"/>
+
+    <Button
+        android:id="@+id/aboute_game"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/setting_aboute"
         android:layout_alignParentEnd="true"
         android:layout_below="@+id/time_game"
-        android:layout_marginEnd="30dp"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="60dp"
+        android:onClick="sentRecent"/>
+            <TextView
+            android:id="@+id/textRecent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/recent"
+            android:layout_below="@+id/aboute_game"
+            android:layout_marginEnd="20dp"
+            android:textStyle="italic"
+            android:textSize="11sp"
+            android:layout_alignParentEnd="true"/>
+             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/recent2"
+                android:layout_below="@+id/textRecent"
+                android:layout_marginEnd="20dp"
+                android:textStyle="italic"
+                android:textSize="11sp"
+                android:layout_alignParentEnd="true"/>
 
     <Button
         android:id="@+id/back"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/buttonback"
-        android:textSize="16sp"
-        android:text="@string/Back"
-        android:layout_below="@+id/languache_game"
-        android:layout_marginEnd="30dp"
-        android:layout_marginTop="50dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@drawable/setting_close"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/settings"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="15dp"
         android:onClick="Back"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lang"
+        android:layout_above="@id/language"
+        android:layout_marginBottom="10dp"
+        android:textStyle="italic"
+        android:textSize="15sp"
+        android:layout_centerHorizontal="true"/>
+
+
+    <ImageView
+        android:id="@+id/language"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/setting_ru"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="40dp"/>
+        <Button
+            android:layout_width="22dp"
+            android:layout_height="23dp"
+            android:layout_toStartOf="@+id/language"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="40dp"
+            android:layout_marginEnd="15dp"
+            android:background="@drawable/setting_choose_left"
+            android:onClick="notNow"/>
+        <Button
+            android:layout_width="22dp"
+            android:layout_height="23dp"
+            android:layout_toEndOf="@+id/language"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="40dp"
+            android:layout_marginStart="15dp"
+            android:background="@drawable/setting_choose_right"
+            android:onClick="notNow"/>
+
 </RelativeLayout>
