--- a/app/src/main/res/layout/game_start.xml
+++ b/app/src/main/res/layout/game_start.xml
@@ -81,7 +81,18 @@
             android:text="Очки" />
         <TextView
             android:id="@+id/score"
-            android:layout_width="50dp"
+            android:layout_width="30dp"
+            android:layout_height="20dp"
+            android:layout_alignStart="@id/scoreMax"
+            android:textColor="#000000"
+            android:layout_marginStart="-30dp"
+            android:layout_marginBottom="5dp"
+            android:layout_alignBottom="@+id/progressBar"
+            android:textAlignment="center"
+            android:textSize="12sp"/>
+        <TextView
+            android:id="@+id/scoreMax"
+            android:layout_width="30dp"
             android:layout_height="20dp"
             android:layout_alignEnd="@id/progressBar"
             android:textColor="#000000"
@@ -90,7 +101,6 @@
             android:layout_alignBottom="@+id/progressBar"
             android:textAlignment="center"
             android:textSize="12sp"/>
-
 
 
 
